--- a/index.html
+++ b/index.html
@@ -1,59 +1,127 @@
 <!doctype html>
 <html>
 <head>
-
-<title>Neural-Net-Chess</title>
-
-<link rel="stylesheet" type="text/css" href="static/chessboard.min.css">
-
-<script src="static/jquery.min.js"></script>
-<script src="static/chessboard.min.js"></script>
-
+    <title>Neural-Net-Chess</title>
+    <link rel="stylesheet" type="text/css" href="static/chessboard.min.css">
+    <script src="static/jquery.min.js"></script>
+    <script src="static/chessboard.min.js"></script>
+    <link rel="icon" type="image/png" href="/static/img/favicon/ai.png"/>
 </head>
-<body style="font-size: 20px;">
+<body style="font-size: 18px;">
+    <button onclick="selfplay()">Neural Net vs. itself</button><br />
+    <button onclick="newGame()">New Game</button><br />
+    <div id="board" style="width: 400px"></div>
+    <p></p>
+    <script type="text/javascript">
+        var board = ChessBoard('board', {
+            position: 'start',
+            draggable: true,
+            onDrop: onDrop
+        });
+        var files = { "a": 0, "b": 1, "c": 2, "d": 3, "e": 4, "f": 5, "g": 6, "h": 7 };
+        function get_square(sq) {
+            return 8 * (parseInt(sq.charAt(1)) - 1) + files[sq.charAt(0)];
+        }
+        function post() {
+            var element = document.getElementById("id01");
+            element.innerHTML = "Posting Winner";
+            element.style = "color:green;"
+            $.get('/post', function (r) {
+                var element = document.getElementById("id03")
+                element.innerHTML = r
+                newGame()
+                selfplay()
+            });
+        }
+        function onDrop(source, target, piece) {
+            if (source == target) return
+            var element = document.getElementById("id01");
+            element.innerHTML = "A.I.: currently searching mind-state.";
+            element.style = "color:blue;"
+            element.style = "background-color:cyan;"
+            var promotion = piece.toLowerCase().charAt(1) == 'p' && parseInt(target.charAt(1)) == 8;
+            var element = document.getElementById("id02");
+            element.innerHTML = "You Moved : " + source + target;
+            $.get('/move_coordinates', { 'from': get_square(source), 'to': get_square(target), 'sauce': source, 'targe': target, 'promotion': promotion }, function (r) {
+                if (r.includes("Game Over")) {
+                    document.querySelector('p').innerText = 'Game Over';
+                    post();
+                } else {
+                    if (r.includes(":")) {
+                        var move = r.split(":")[0];
+                        var r1 = r.split(":")[1];
+                        document.querySelector('p').innerText = '';
+                        board.position(r1);
+                        var element = document.getElementById("id01");
+                        element.innerHTML = "Human turn:";
+                        element.style = "color:black;";
+                        var element = document.getElementById("id02");
+                        element.innerHTML = "Computer Moved : " + move;
+                    } else {
+                        var element = document.getElementById("id01");
+                        element.innerHTML = "Restart required";
+                        element.style = "color:red;";
+                        post();
+                    }
+                }
+            });
+        }
+        function newGame() {
+            var element = document.getElementById("id01");
+            element.innerHTML = "Your turn: ";
+            element.style = "color:black;"
+            $.get('/newgame', function (r) {
+                document.querySelector('p').innerText = '';
+                board.position(r);
+            });
+        }
+        function eo(num) { return num % 2; } {
+        }
+        var i = 0
+        function selfplay(m) {
+            i = 1 + i
+            if (m == null) var m = ''
+            var element = document.getElementById("id01");
+            if (eo(i)) {
+                element.innerHTML = "White is thinking";
+                element.style = "color:darkmagenta;"
+            } else {
+                element.innerHTML = "Black is thinking";
+                element.style = "color:black;"
+            }
+            $.get('/selfplay', { 'm': m }, function (r) {
+                if (r.includes("game over")) {
+                    document.querySelector('p').innerText = 'game over';
+                    post();
+                } else {
+                    if (r.includes(":")) {
+                        var move = r.split(":")[0];
+                        var r1 = r.split(":")[1];
+                        document.querySelector('p').innerText = '';
+                        board.position(r1);
+                        var element = document.getElementById("id02");
+                        element.innerHTML = "Last Move: " + move;
+                        selfplay(move);
+                    } else {
+                        var element = document.getElementById("id01");
+                        element.innerHTML = "All kinds of messed up: restart needed";
+                        element.style = "color:red;";
+                    }
+                }
+            });
+        }
+        function undo() {
+            var element = document.getElementById("id01");
+            element.innerHTML = "Udid move";
+            element.style = "color:red;"
+            $.get('/undo', function (r) {
+                document.querySelector('p').innerText = '';
+                board.position(r);
+            });
+        }
+    </script>
 
-<a href="/selfplay">Neural Net plays itself</a>
-<button onclick="newGame()">new game</button><br/>
-<div id="board" style="width: 600px"></div>
-<p></p>
-
-
-<script type="text/javascript">
-
-var board = ChessBoard('board', {
-  position: 'start',
-  draggable: true,
-  onDrop: onDrop
-});
-
-var files = {"a": 0, "b": 1, "c": 2, "d": 3, "e": 4, "f": 5, "g": 6, "h": 7};
-function get_square(sq) {
-  return 8*(parseInt(sq.charAt(1)) - 1) + files[sq.charAt(0)];
-}
-
-
-function onDrop(source, target, piece) {
-  if(source == target) return
-
-  var promotion = piece.toLowerCase().charAt(1) == 'p' && parseInt(target.charAt(1)) == 8;
-
-  $.get('/move_coordinates', {'from': get_square(source), 'to': get_square(target), 'Promotion': promotion}, function(r) {
-    if (r.includes("Game over")) {
-      document.querySelector('p').innerText = 'Game over';
-    } else {
-      document.querySelector('p').innerText = '';
-      board.position(r);
-    }
-  });
-}
-
-function newGame() {
-  $.get('/newgame', function(r) {
-    document.querySelector('p').innerText = '';
-    board.position(r);
-  });
-}
-</script>
-
+    <h3 id="id01" style="color:black">Your turn: </h3>
+    <h3 id="id02" style="color:red">Last move:</h3>
 </body>
 </html>
